samples/_failures_safe/1761536693_9ea158_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f0fb30a.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_7f0fb30a.c:112:17: error: expected ‘,’ or ‘;’ at end of input
  112 |                 long long product = (long long)a->data
      |                 ^~~~
./samples/SAFE/__tmp_7f0fb30a.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f0fb30a.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f0fb30a.c:112:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f0fb30a.c:112:17: error: expected declaration or statement at end of input
